workload/a0005-o/microservice-b/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: microservice-b
  labels:
    app.kubernetes.io/name: a0005
    app.kubernetes.io/component: microservice-b
    pci-scope: out-of-scope
spec:
  replicas: 2
  selector:
    matchLabels:
      app.kubernetes.io/name: a0005
      app.kubernetes.io/component: microservice-b
      pci-scope: out-of-scope
  template:
    metadata:
      labels:
        app.kubernetes.io/name: a0005
        app.kubernetes.io/component: microservice-b
        pci-scope: out-of-scope
    spec:
      automountServiceAccountToken: false
      serviceAccount: microservice-b-sa
      containers:
      - name: microservice-b
        image: YOUR_ACR.azurecr.io/live/a0005/chain-api:1.0
        imagePullPolicy: IfNotPresent
        ports:
        - name: web
          protocol: TCP
          containerPort: 8080
        securityContext:
          allowPrivilegeEscalation: false
          runAsUser: 10001
          runAsGroup: 3000
          capabilities:
            drop:
              - all
        resources:
          requests:
            cpu: 50m
            memory: 100Mi
          limits:
            cpu: 100m
            memory: 200Mi
      nodeSelector:
        kubernetes.io/arch: amd64
        kubernetes.io/os: linux
        pci-scope: out-of-scope
---
kind: Service
apiVersion: v1
metadata:
  name: microservice-b
  labels:
    app.kubernetes.io/name: a0005
    app.kubernetes.io/component: microservice-b
    pci-scope: out-of-scope
spec:
  selector:
    app.kubernetes.io/name: a0005
    app.kubernetes.io/component: microservice-b
  ports:
  - name: http
    port: 80
    protocol: TCP
    targetPort: web
